# ── Build ─────────────────────────────────────────────────────────────────────

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project ───────────────────────────────────────────────────────────────────

[project]
name = "entry"
version = "0.1.0"
description = "Qrew entry service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings[yaml]>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT[crypto]>=2.8",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "httpx>=0.27",
    "cryptography>=42.0",
    "exceptions",
    "idempotency",
    "middleware",
    "observability",
    "db",
    "locking",
    "messaging",
    "worker",
    "probes",
    "contracts",
    "security",
]

[tool.uv.sources]
exceptions = { workspace = true }
idempotency = { workspace = true }
middleware = { workspace = true }
observability = { workspace = true }
db = { workspace = true }
locking = { workspace = true }
messaging = { workspace = true }
worker = { workspace = true }
probes = { workspace = true }
contracts = { workspace = true }
security = { workspace = true }

[project.scripts]
dev = "com.qode.qrew.v1.entry.__main__:main"
worker = "com.qode.qrew.v1.entry.worker.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "httpx>=0.27",
    "httpx2>=2.4.0",
    "pyright>=1.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "fakeredis[lua]>=2.20",
    "testcontainers[postgres]>=4.0",
    "arq>=0.25",
]

[tool.hatch.build.targets.wheel]
packages = ["src/com"]

# ── Pyright ───────────────────────────────────────────────────────────────────

[tool.pyright]
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/shared-python/exceptions/src", "../../packages/shared-python/idempotency/src", "../../packages/shared-python/middleware/src", "../../packages/shared-python/observability/src", "../../packages/shared-python/db/src", "../../packages/shared-python/locking/src", "../../packages/shared-python/messaging/src", "../../packages/shared-python/worker/src", "../../packages/shared-python/probes/src", "../../packages/contracts/src", "../../packages/shared-python/security/src"]
venvPath = "../.."
venv = ".venv"

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src", "tests", "../../packages/shared-python/exceptions/src", "../../packages/shared-python/idempotency/src", "../../packages/shared-python/middleware/src", "../../packages/shared-python/observability/src", "../../packages/shared-python/db/src", "../../packages/shared-python/locking/src", "../../packages/shared-python/messaging/src", "../../packages/shared-python/worker/src", "../../packages/shared-python/probes/src", "../../packages/contracts/src", "../../packages/shared-python/security/src"]
python_files = ["*_test.py"]
addopts = ["--tb=short", "--strict-markers", "--no-header"]
markers = ["integration: marks tests as integration tests (require Docker)"]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__main__.py"]
