
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "identity"
version = "0.1.0"
description = "Qrew identity service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings[yaml]>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT[crypto]>=2.8",
    "passlib[bcrypt,argon2]>=1.7",
    "bcrypt>=3.2,<4.0",
    "argon2-cffi>=23.1",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "email-validator>=2.2",
    "httpx>=0.27",
    "aiosmtplib>=3.0",
    "phonenumbers>=8.13",
    "zxcvbn>=4.4",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "arq>=0.26",
    "webauthn>=2.0",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "cryptography>=42.0",
    "geoip2>=5.2.0",
    "nats-py>=2.7",
    "exceptions",
    "idempotency",
    "middleware",
    "ratelimit",
    "observability",
    "db",
    "jobs",
    "locking",
    "messaging",
    "worker",
    "pagination",
    "probes",
    "contracts",
    "security",
    "outbox",
]

[project.scripts]
identity-dev = "com.qode.qrew.v1.identity.__main__:main"
identity-worker = "com.qode.qrew.v1.identity.worker.__main__:run"
identity-arq-worker = "com.qode.qrew.v1.identity.worker.runner:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "pyright>=1.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "fakeredis[lua]>=2.20",
    "httpx2>=2.4.0",
    "mailchecker>=6.0.20",
    "testcontainers[postgres,redis]>=4.0",
]

[tool.uv.sources]
exceptions = { workspace = true }
idempotency = { workspace = true }
middleware = { workspace = true }
ratelimit = { workspace = true }
observability = { workspace = true }
db = { workspace = true }
jobs = { workspace = true }
locking = { workspace = true }
messaging = { workspace = true }
worker = { workspace = true }
pagination = { workspace = true }
probes = { workspace = true }
contracts = { workspace = true }
security = { workspace = true }
outbox = { workspace = true }

[tool.uv]
package = true
venvPath = "../.."
venv = ".venv"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/shared-python/exceptions/src", "../../packages/shared-python/idempotency/src", "../../packages/shared-python/middleware/src", "../../packages/shared-python/ratelimit/src", "../../packages/shared-python/observability/src", "../../packages/shared-python/db/src", "../../packages/shared-python/jobs/src", "../../packages/shared-python/locking/src", "../../packages/shared-python/messaging/src", "../../packages/shared-python/worker/src", "../../packages/shared-python/pagination/src", "../../packages/shared-python/probes/src", "../../packages/contracts/src", "../../packages/shared-python/security/src", "../../packages/shared-python/outbox/src"]
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src", "tests", "../../packages/shared-python/exceptions/src", "../../packages/shared-python/idempotency/src", "../../packages/shared-python/middleware/src", "../../packages/shared-python/ratelimit/src", "../../packages/shared-python/observability/src", "../../packages/shared-python/db/src", "../../packages/shared-python/jobs/src", "../../packages/shared-python/locking/src", "../../packages/shared-python/messaging/src", "../../packages/shared-python/worker/src", "../../packages/shared-python/pagination/src", "../../packages/shared-python/probes/src", "../../packages/contracts/src"]
python_files = ["*_test.py"]
markers = [
    "integration: mark test as integration test requiring Docker services (Postgres + Redis)",
]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--no-header",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0

[tool.hatch.build.targets.wheel]
packages = ["src/com"]
